--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   background-color: #f3f3f3;
+  padding-bottom: 250px;
 }
 #app {
   margin-top: 20px;
