--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   font-family: sans-serif;
   text-align: center;
   background-color: #f3f3f3;
-  padding-bottom: 250px;
 }
 #app {
   margin-top: 20px;
@@ -19,4 +18,39 @@ button {
 #welcome {
   font-weight: bold;
   margin-bottom: 10px;
+}
+
+
+#introScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#dogImage {
+  width: 200px;
+  height: auto;
+  animation: zoomIn 3s ease-out forwards;
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
 }
